set fixed, low z-index for user marker to prevent pverlapping

--- a/src/pages/home/tabs/TasksMap/TasksMap.scss
+++ b/src/pages/home/tabs/TasksMap/TasksMap.scss
@@ -65,3 +65,7 @@ page-tasks-map {
         }
     }
 }
+
+.leaflet-marker-icon.marker.userPosition{
+    z-index: 10!important;
+}
